--- a/src/App.css
+++ b/src/App.css
@@ -1,7 +1,24 @@
 :root {
   --base-color: #212529;
+  --secondary-color: #cff4fc;
 }
 
 #root, body, html {
   background-color: var(--base-color);
+}
+
+.validation-tooltip {
+  position: absolute;
+  top: 0px;
+  background-color: var(--base-color);
+  border: solid 1px var(--secondary-color);
+  color: var(--secondary-color);
+  filter: opacity(0.7);
+  padding: 0px 3px 0px 3px;
+  border-radius: 4px;
+  z-index: 1;
+}
+
+.input-container {
+  position: relative;
 }
