--- a/src/App.css
+++ b/src/App.css
@@ -1,24 +1,70 @@
 :root {
   --base-color: #212529;
-  --secondary-color: #cff4fc;
+  --secondary-color: #ffc107;
+  --placeholder-text-color: white;
 }
 
 #root, body, html {
   background-color: var(--base-color);
 }
 
+.table-tools-container {
+  display: flex;
+  flex-direction: row;
+  position: sticky;
+  top: 0;
+  background-color: var(--base-color);
+  border-bottom: solid 3px var(--secondary-color);
+}
+
 .validation-tooltip {
   position: absolute;
-  top: 0px;
-  background-color: var(--base-color);
-  border: solid 1px var(--secondary-color);
+  top: 0;
+  left: 0;
+  transform: translateY(28px);
   color: var(--secondary-color);
-  filter: opacity(0.7);
   padding: 0px 3px 0px 3px;
-  border-radius: 4px;
   z-index: 1;
+  font-size: 12px;
 }
 
 .input-container {
   position: relative;
+  margin-bottom: 18px;
+}
+
+.table-tool-button {
+  width: 89px;
+  border-width: 2px !important;
+  font-weight: bold !important;
+}
+
+.add-edit-buttons-container, .extra-table-tools {
+  display: flex;
+  flex-direction: row;
+  gap: 13px;
+}
+
+.table-add-edit-form-container,
+.table-filter-form-container,
+.extra-table-tools-container {
+  padding: 15px;
+}
+
+.table-add-edit-form-container,
+.table-filter-form-container {
+  border-right: solid 2px var(--secondary-color);
+  border-radius: 10px;
+}
+
+.table-text-input {
+  background-color: var(--base-color);
+  border: solid 2px var(--secondary-color);
+  border-radius: 5px;
+  color: white;
+}
+
+.table-text-input::placeholder {
+  color: var(--secondary-color);
+  filter: opacity(0.7);
 }
