--- a/src/App.css
+++ b/src/App.css
@@ -86,12 +86,19 @@
   color: var(--secondary-color);
 }
 
-.table-hint, .home-header, .no-page-header {
+.table-hint,
+.home-header,
+.no-page-header,
+.fetch-loading-header,
+.fetch-error-header {
   font-size: 25px;
   color: var(--secondary-color);
 }
 
-.home-container, .no-page-container {
+.home-container,
+.no-page-container,
+.fetch-loading-header,
+.fetch-error-header {
   display: flex;
   flex-direction: column;
   align-items: center;
